Simplified performance tips

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -782,7 +782,7 @@
   %
   \vspace{\fill}
   %
-  \begin{myboxed}{Text aligmnents \hfill
+  \begin{myboxed}{Text alignments \hfill
       \API{https://matplotlib.org/tutorials/text/text_props.html} }
     plt.\textbf{text}( …, ha=… , va=…, … )\\
 
@@ -892,13 +892,16 @@
 
   
   
-  \begin{myboxed}{Color names}
+  \begin{myboxed}{Color names \hfill
+      \API{https://matplotlib.org/api/colors_api.html} }
     \includegraphics[width=\columnwidth]{colornames.pdf}
   \end{myboxed}
   %
   \vspace{\fill}
   %
-  \begin{myboxed}{Image interpolation}
+  \begin{myboxed}{Image interpolation
+      \hfill \API{https://matplotlib.org/gallery/images_contours_and_fields/interpolation_methods.html} }
+        \smallskip
 %%    plt.\textbf{imshow}(…, interpolation=…)\\
 %%    plt.\textbf{contour[f]}(…, interpolation=…)\\
     \includegraphics[width=\columnwidth]{interpolations.pdf}
@@ -947,6 +950,8 @@
     \hspace*{2.5mm}~$\rightarrow$ ax.set\_xticks([])\\
     \textbf{… remove tick labels ?}\\
     \hspace*{2.5mm}~$\rightarrow$ ax.set\_[xy]ticklabels([])\\
+    \textbf{… rotate tick labels ?}\\
+    \hspace*{2.5mm}~$\rightarrow$ plt.[xy]ticks(rotation=90)\\
     \textbf{… hide top spine?}\\
     \hspace*{2.5mm}~$\rightarrow$ ax.spines['top'].set\_visible(False)\\
     \textbf{… hide legend border?}\\
@@ -965,8 +970,6 @@
     \hspace*{2.5mm}~$\rightarrow$ plt.get\_cmap(``viridis\_r'')\\
     \textbf{… get a discrete colormap?}\\
     \hspace*{2.5mm}~$\rightarrow$ plt.get\_cmap(``viridis'', 10)\\
-    \textbf{… rotate tick labels ?}\\
-    \hspace*{2.5mm}~$\rightarrow$ plt.[xy]ticks(rotation=90)\\
     \textbf{… show a figure for one second?}\\
     \hspace*{2.5mm}~$\rightarrow$ plt.show(block=False), time.sleep(1)
   \end{myboxed}
@@ -974,24 +977,23 @@
   \vspace{\fill}
   %
   \begin{myboxed}{Performance tips}
+    \smallskip
     {\ttfamily \fontsize{6pt}{7pt}\selectfont
-    \textcolor{red}{ax.scatter(X, Y)  \hfill slow}\\
-    ax.plot(X, Y, marker="o", ls="")  \hfill fast\\
+    \textcolor{red}{scatter(X, Y)  \hfill slow}\\
+    plot(X, Y, marker="o", ls="")  \hfill fast\\
     \hrule \smallskip
-    \textcolor{red}{for i in range(0,n,2):  \hfill (very) slow}\\
-    \hspace*{2.5mm}~\textcolor{red}{plt.plot(X[i:i+2], Y[i:i+2])}\\
-
-    X0, Y0 = X[0::2], Y[0::2]         \hfill fast\\
-    X1, Y1 = X[1::2], Y[1::2]\\
-    S = [None]*len(X)\\
-    X = [v for t in zip(X0,X1,S) for v in t]\\
-    Y = [v for t in zip(Y0,Y1,S) for v in t]\\
-    plt.plot(X,Y)}
+    \textcolor{red}{for i in range(n): plot(X[i]) \hfill slow}\\
+    plot(sum([x+[None] for x in X],[])) \hfill fast\\
+    \hrule \smallskip
+    \textcolor{red}{cla(), imshow(…), canvas.draw() \hfill slow}\\
+    im.set\_data(…), canvas.draw() \hfill fast\smallskip
+    }
   \end{myboxed}
   %
   \vspace{\fill}
   %
   \begin{myboxed}{Beyond Matplotlib}
+        \smallskip
     \href{https://seaborn.pydata.org/}{\textbf{Seaborn}}: Statistical Data Visualization\\
     \href{https://scitools.org.uk/cartopy/docs/latest/}{\textbf{Cartopy}}: Geospatial Data Processing\\
     \href{https://yt-project.org/doc/index.html}{\textbf{yt}}: Volumetric data Visualization\\
