--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -931,7 +931,14 @@
       K: lower center / (.5,1.1) & L: lower left / (.1,1.1)
     \end{tabular}  
   \end{myboxed}
-
+  %
+  \vspace{\fill}
+  %
+  \begin{myboxed}{Annotation connection styles \hfill
+      \API{https://matplotlib.org/tutorials/text/annotations.html} }
+    \includegraphics[width=\columnwidth]{annotation-connection-styles.pdf}
+  \end{myboxed}
+  
   \vfill\null \columnbreak
   
   %
@@ -983,14 +990,18 @@
   \begin{myboxed}{Performance tips}
     \smallskip
     {\ttfamily \fontsize{6pt}{7pt}\selectfont
+     %
     \textcolor{red}{scatter(X, Y)  \hfill slow}\\
-    plot(X, Y, marker="o", ls="")  \hfill fast\\
-    \hrule \smallskip
+    plot(X, Y, marker="o", ls="")  \hfill fast%
+    \vskip.5\baselineskip
+    %
     \textcolor{red}{for i in range(n): plot(X[i]) \hfill slow}\\
-    plot(sum([x+[None] for x in X],[])) \hfill fast\\
-    \hrule \smallskip
+    plot(sum([x+[None] for x in X],[])) \hfill fast%
+    \vskip.5\baselineskip
+    %
     \textcolor{red}{cla(), imshow(…), canvas.draw() \hfill slow}\\
-    im.set\_data(…), canvas.draw() \hfill fast\smallskip
+    im.set\_data(…), canvas.draw() \hfill fast%
+    \vskip.1\baselineskip
     }
   \end{myboxed}
   %
