First complete version

--- a/cheatsheets.tex
+++ b/cheatsheets.tex
@@ -938,8 +938,17 @@
       \API{https://matplotlib.org/tutorials/text/annotations.html} }
     \includegraphics[width=\columnwidth]{annotation-connection-styles.pdf}
   \end{myboxed}
-  
-  \vfill\null \columnbreak
+  %
+  \vspace{\fill}
+  %
+  \begin{myboxed}{Annotation arrow styles \hfill
+      \API{https://matplotlib.org/tutorials/text/annotations.html} }
+    \includegraphics[width=\columnwidth]{annotation-arrow-styles.pdf}
+  \end{myboxed}
+
+  %
+  \vspace{\fill}
+  %
   
   %
   \begin{myboxed}{How do I …}
