Startd the handout intermediate

--- a/handout-beginner.tex
+++ b/handout-beginner.tex
@@ -34,7 +34,7 @@
   showtabs=false,
   tabsize=2,
   %
-  emph = { plot, scatter, imshow, bar, contourf, pie,
+  emph = { plot, scatter, imshow, bar, contourf, pie, subplots,
            errorbar, boxplot, hist, title, xlabel, ylabel, suptitle },
   emphstyle = {\ttfamily\bfseries}
 }
@@ -295,7 +295,7 @@ show the value under the mouse.
 %
 \vfill
 %
-{\scriptsize Matplotlib handout for beginners. Copyright (c)
+{\scriptsize Matplotlib 3.2 handout for beginners. Copyright (c)
   2020 Nicolas P. Rougier. Released under a CC-BY International 4.0
   License. Supported by NumFocus Grant \#12345.\par}
 
